--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-rumps==0.4.0
-python_dateutil==2.8.2
+google_api_python_client==2.154.0
 httplib2==0.22.0
+jaraco.text==4.0.0
 oauth2client==4.1.3
-google_api_python_client==2.108.0
+python_dateutil==2.9.0.post0
+rumps==0.4.0
